# dotdicttools

./: README.md  dot_dict.py  dotdicttools.py  pyproject.toml
.github/workflows/: pypi.yml  release.yml
tests/: test_dotdict.py
