[build-system]
requires = ["setuptools"]

[project]
authors = [{name = "Patrick Elmer", email = "patrick@elmer.ws"}]
classifiers = ["License :: OSI Approved :: MIT License"]
description = "README.md"
dynamic = ["version", "readme"]
license = {file = "LICENSE"}
name = "dot_dict"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "dot_dict.__version__"}

[project.urls]
Home = "https://github.com/dotdict/dot_dict"
